# gemm

./: .gitignore  CMakeLists.txt  MMult_4x4_13.h  MMult_4x4_5.h  README.md  cpu_peak.cc  flops.cu  gemm.cc  gemm.cu  gemm.h
